<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PostTaskDetails_Activity"
        tools:ignore="ExtraText">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/backButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="58dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:civ_border_color="#BCBABA"
            app:civ_border_width="1sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postTaskTitle"
            android:layout_width="99dp"
            android:layout_height="41dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:text="@string/task_details"
            android:textColor="@android:color/black"
            android:textSize="17dp"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/groupItems"
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="25sp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/housw"
            android:layout_width="135dp"
            android:layout_height="112dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="125dp"
            android:background="@drawable/backgroundoftdetails"
            android:src="@drawable/image11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="160dp"
            android:layout_height="27dp"
            android:layout_marginStart="167dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/house_clean"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="15dp"
            android:layout_height="14dp"
            android:layout_marginTop="10sp"
            app:layout_constraintStart_toStartOf="@+id/taskTitle"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="19dp"
            android:layout_height="25dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="4.8 "
            android:textColor="@color/vd_grayishRed"
            android:textSize="12dp"
            app:layout_constraintStart_toEndOf="@id/star"
            app:layout_constraintTop_toBottomOf="@id/taskTitle" />

        <TextView
            android:id="@+id/taskTitleLabel"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="293dp"
            android:text="@string/task_date"
            android:gravity="center_vertical"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/datetimeshow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/datetimeshow"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginEnd="10dp"
            android:text="@string/date_time"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/taskTitleLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/taskTitleLabel"
            app:layout_constraintTop_toTopOf="@+id/taskTitleLabel" />

        <TextView
            android:id="@+id/postedbyTitle"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/posted"
            android:textColor="@color/gray"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleLabel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="45dp"
            app:layout_constraintBottom_toBottomOf="@+id/postedbyTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postedbyTitle"
            app:layout_constraintTop_toTopOf="@+id/postedbyTitle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/postedbyImage"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:src="@drawable/image11"
                app:civ_border_color="@color/black"
                app:civ_border_width="1sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/postedName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/postedbyImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/postedbyImage"
                app:layout_constraintTop_toTopOf="@+id/postedbyImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/locationtitle"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/location"
            android:textColor="@color/gray"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/locationdetails"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postedbyTitle" />

        <TextView
            android:id="@+id/locationdetails"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:text="@string/address"
            android:textColor="@color/very_dark_gray"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/locationtitle"
            app:layout_constraintTop_toTopOf="@+id/locationtitle" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginTop="40dp"
            android:text="@string/description"
            android:textColor="@color/gray"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationtitle" />

        <TextView
            android:id="@+id/description"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/very_dark_gray"
            android:textSize="11sp"
            android:layout_marginTop="5sp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />
        <TextView
            android:id="@+id/estimatedhourstitle"
            android:layout_width="112dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/estimated_hrs"
            android:textColor="@color/gray"
            android:textSize="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/estimatedhours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hrs"
            android:textColor="@color/very_dark_gray"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@id/estimatedhourstitle"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintTop_toTopOf="@+id/estimatedhourstitle" />

        <TextView
            android:id="@+id/taskPricetitle"
            android:layout_width="112dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:text="Task Price"
            android:textColor="@color/gray"
            android:textSize="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estimatedhourstitle" />

        <TextView
            android:id="@+id/rmtitle"
            android:layout_width="22dp"
            android:layout_height="24dp"
            android:text="RM"
            android:textColor="@color/orange"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/taskPricetitle"
            app:layout_constraintEnd_toStartOf="@+id/price"
           />

        <TextView
            android:id="@+id/price"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:text="500"
            android:textColor="@color/orange"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/rmtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rmtitle" />
        <TextView
            android:id="@+id/wiatingfortaskoffer"
            android:layout_width="331dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/w_offer"
            android:textColor="@color/grayishRed"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskPricetitle" />
        <TextView
            android:id="@+id/offers"
            android:layout_width="62dp"
            android:layout_height="26dp"
            android:layout_marginTop="30dp"
            android:text="Offers(0)"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wiatingfortaskoffer" />

        <ImageView
            android:id="@+id/offersImage"
            android:layout_width="180dp"
            android:layout_height="125dp"
            android:layout_marginTop="25dp"
            android:text="Offers(0)"
            android:textColor="#000000"
            android:textSize="15dp"
            android:src="@drawable/offersimg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offers" />
        <TextView
            android:id="@+id/questionstitle"
            android:layout_width="88dp"
            android:layout_height="26dp"
            android:layout_marginTop="25dp"
            android:text="@string/ques"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offersImage" />

        <EditText
            android:id="@+id/questions"
            android:layout_width="334dp"
            android:layout_height="38dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/background"
            android:hint="@string/ques_text"
            android:textSize="10dp"
            android:layout_marginTop="5sp"
            android:textColor="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionstitle"    />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/queofpersonImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20sp"
            android:src="@drawable/image11"
            app:civ_border_color="@color/black"
            app:civ_border_width="1sp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questions" />

        <EditText
            android:id="@+id/writequehere"
            android:layout_width="257dp"
            android:layout_height="51dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/background"
            android:gravity="start"
            android:hint="@string/write_ques"
            android:textColor="@color/lightGray"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/queofpersonImage"
            app:layout_constraintStart_toEndOf="@id/queofpersonImage"
            app:layout_constraintTop_toTopOf="@+id/queofpersonImage" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/attachments"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image11"
            android:layout_marginTop="-1dp"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="@+id/questions"
            app:layout_constraintStart_toEndOf="@id/writequehere"
            app:layout_constraintTop_toTopOf="@+id/writequehere" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image11"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/questions"
            app:layout_constraintStart_toEndOf="@id/writequehere"
            app:layout_constraintBottom_toBottomOf="@+id/writequehere" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>